--- a/二阶倒立摆控制实验/README
+++ b/二阶倒立摆控制实验/README
@@ -3,8 +3,9 @@
 一、倒立摆控制主程序： ①二级倒立摆：main_order2.m
 
 以一级倒立摆控制程序为例： 包含： ①主程序文件（main_order2.m）：针对二级倒立摆的线性化模型的稳定性分析（可控性分析）、极点配置、LQR、MPC、PID控制程序 ②非线性动力学模型程序（IP_order2_dynamic.m 或者 IP_order2_fun.m） ③可视化绘图程序（IP_order1_draw.m）
+④线性MPC求解器（SolveLinearMPC.m）
 
 二、Simulink仿真 ①IP_order2_simscape.slx ②IP_order2_simscape_pre.slx（matlab低版本） 使用simulink搭建实体模型，无控制输入，观察分析平衡点的稳定性；
 ③IP_order2_simscape_all.slx 使用极点配置和lqr方法进行控制 ④IP_order2_simscape_all_pre.slx（matlab低版本）。
 
-三、初始偏离平衡点无控制输入的自由运动(gif_name_free_2.gif)
+三、极点配置(gif_name_feedback_2.gif)、(gif_name_lqr_2.gif)、MPC(gif_name_mpc_2.gif)
